# nadaesinclick

./: .gitignore  CMakeLists.txt  Makefile  README.md
.github/workflows/: build.yml
res/: resource.h  resource.rc
src/: clicker.cpp  clicker.h  config.cpp  config.h  hotkey.cpp  hotkey.h  main.cpp  window.cpp  window.h
